compiler/tests/fixtures/invalid/semantics/special_role_this_in_casting_pool.viv
action greet:
    roles:
        @greeter:
            as: initiator
        @target:
            as: partner
            from: @this.participants
